# Epitech-Tek2

./: README.md
B3/CPPseminar/cpp_d02a_2019/: .gitignore  Makefile  double_btree_create_node.c  double_btree_delete.c  double_btree_get_depth.c  double_btree_get_max_value.c  double_btree_get_min_value.c  double_btree_get_size.c  double_btree_is_empty.c  double_list_add_elem_at_back.c  double_list_add_elem_at_front.c  double_list_add_elem_at_position.c  double_list_create_node.c  double_list_dump.c  (+36 more)
B3/SHL_2019_shell/: B-SHL-400_BDSH.txt  bdsh  file.json  getopt  temp  test
B4/B4 - Concurrent Programming/bootstrap/: CMakeLists.txt
B4/B4 - Concurrent Programming/bootstrap/draft/: SafeQueue.cpp  SafeQueue.hpp
B4/B4 - Concurrent Programming/bootstrap/ex01/: main.cpp
B4/B4 - Concurrent Programming/bootstrap/ex02/: ex02.cpp  ex02.hpp  main.cpp
B4/B4 - Concurrent Programming/bootstrap/ex03/: ScopedLock.cpp  ScopedLock.hpp  main.cpp
B4/B4 - Concurrent Programming/bootstrap/ex04/: Thread.cpp  Thread.hpp  main.cpp
B4/B4 - Concurrent Programming/bootstrap/ex05/: Queue.hpp  SafeQueue.cpp  SafeQueue.hpp  a.out
B4/B4 - Unix Prog. - Memory/malloc/PSU_2019_malloc/: CMakeLists.txt  Makefile
B4/B4 - Unix Prog. - Memory/malloc/PSU_2019_malloc/include/: calloc.h  error.h  free.h  malloc.h  realloc.h  reallocarray.h
B4/B4 - Unix Prog. - Memory/malloc/PSU_2019_malloc/src/: calloc.c  error.c  free.c  get_mem_block.c  init_malloc_session.c  malloc.c  realloc.c  reallocarray.c
B4/B4 - Unix Prog. - Memory/malloc/PSU_2019_malloc/tests/: tests_free.c  tests_malloc.c  unittest.h
(+2454 files in other folders)
